# kaitai_struct_python_engine

./: LICENSE  README.md  pyproject.toml
src/kaitai_struct_python_engine/: __init__.py  __main__.py  engine.py  kaitai_struct_compiler.py  service.py
tests/: test_engine.py  test_kaitai_struct_compiler.py
tests/input/: write
tests/ksy/: all_at_once.ksy  hello_world.ksy
